hphp/test/quick/string_replace_overflow.php.expectf

Fatal error: String too large in %s on line 3
